promethus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - prometheus.nradiowifi.com
    secretName: prometheus
  rules:
    - host: prometheus.nradiowifi.com
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
            path: /
